--- a/index.html
+++ b/index.html
@@ -7,33 +7,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index, follow">
 
-  <!-- SEO -->
-  <title>Paneles Solares para Empresas en México | Paneles Solares México</title>
-  <meta name="description" content="Instalamos paneles solares para empresas, maquilas, fábricas y oficinas en toda la República Mexicana. Créditos de hasta 10 millones de pesos, reducción de consumo eléctrico y retorno de inversión rápido.">
-  <meta name="author" content="Paneles Solares México">
-  <meta name="geo.region" content="MX">
-  <meta name="geo.placename" content="México">
-  <meta name="geo.position" content="19.4326;-99.1332">
+<!-- SEO -->
+<title>Luminarias LED para Exterior e Industrial en México | Luminarias.com.mx</title>
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://luminarias.com.mx/">
+<meta name="description" content="Fabricantes y distribuidores de luminarias LED para exterior, alumbrado público, naves industriales, jardines, fachadas y parques. Envíos a todo México.">
 
+<meta name="author" content="Luminarias LED México">
+<meta name="geo.region" content="MX">
+<meta name="geo.placename" content="México">
+<meta name="geo.position" content="19.4326;-99.1332">
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Paneles Solares para Empresas en México | Ahorro Energético Garantizado" />
-  <meta property="og:description" content="Soluciones fotovoltaicas para empresas, plantas, centros de datos, oficinas e industria. Financiamiento accesible y cobertura nacional." />
-  <meta property="og:image" content="https://panelessolaresmexico.com.mx/images/og-paneles-solares.png">
-  <meta property="og:url" content="https://panelessolaresmexico.com.mx" />
-  <meta property="og:type" content="website" />
+<!-- Canonical -->
+<link rel="canonical" href="https://luminarias.com.mx/">
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Paneles Solares Empresariales en México | Paneles Solares México" />
-  <meta name="twitter:description" content="Energía solar para empresas con financiamiento. Ahorra en tu recibo CFE e invierte en energía renovable." />
-  <meta name="twitter:image" content="https://panelessolaresmexico.com.mx/images/og-paneles-solares.png" />
+<!-- Open Graph -->
+<meta property="og:title" content="Luminarias LED para Exterior e Industrial en México" />
+<meta property="og:description" content="Iluminación LED profesional para empresas, parques, fábricas, comercios y hogares. Ahorro energético garantizado." />
+<meta property="og:image" content="https://luminarias.com.mx/images/og-luminarias.png">
+<meta property="og:url" content="https://luminarias.com.mx/" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Luminarias LED para Exterior e Industrial en México">
+<meta name="twitter:description" content="Fabricantes y distribuidores de luminarias LED con envío a toda la República Mexicana.">
+<meta name="twitter:image" content="https://luminarias.com.mx/images/og-luminarias.png">
 
   <!-- Datos de contacto estructurados -->
-  <meta name="email" content="ventas@panelessolaresmexico.com.mx" />
+  <meta name="email" content="ventas@luminarias.com.mx" />
 
   <!-- Google Ads Tag -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-952929075"></script>
