--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <meta name="twitter:image" content="https://luminarias.com.mx/images/og-luminarias.png">
 
   <!-- Datos de contacto estructurados -->
-  <meta name="email" content="ventas@luminarias.com.mx" />
+  <meta name="email" content="ventas@panelessolaresmexico.com.mx" />
 
   <!-- Google Ads Tag -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-952929075"></script>
@@ -209,10 +209,12 @@ function registrarConversion(url) {
       
      <!-- Columna de texto -->
 <div class="col-md-6 d-flex flex-column justify-content-center slider_text">
-    <h1><strong class="cur">Reduzca hasta un 90% de su consumo eléctrico</strong></h1>
+    <h1><strong class="cur">Iluminación solar y LED de alto rendimiento para proyectos profesionales</strong></h1>
     <p>
-        Instalación profesional, interconexión directa a su red eléctrica y financiamiento de hasta $10 millones MXN. 
-        Solo necesitamos su recibo de luz para comenzar a ahorrar.
+        Iluminación solar y LED de alto rendimiento para proyectos profesionales
+Diseñada para vialidades, industrias y espacios públicos.
+Asesoría inmediata y entrega a todo México.
+
     </p>
     <div style="margin-top: 10px;">
 <a class="main_bt" 
