--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ Asesoría inmediata y entrega a todo México.
                 </div>
                 <div class="full margin_top_20">
                     <p>
-                        Somos líderes en soluciones de paneles solares interconectados para empresas, corporaciones, fábricas y centros de datos con alta demanda eléctrica. Contamos con experiencia en proyectos de gran escala, ofreciendo instalación profesional, financiamiento directo de hasta $10 millones y cobertura en toda la República Mexicana. Diseñamos propuestas personalizadas según el recibo de luz de cada cliente, optimizando su consumo eléctrico y garantizando eficiencia energética. Implementamos proyectos integrales con equipos de alta calidad y cumplimiento de normas. Confía en nuestra experiencia para reducir costos y asegurar un retorno de inversión confiable.
+                        Somos especialistas en luminarias LED viales, solares e industriales con más de 15 años en el mercado. Desarrollamos proyectos para empresas, industria y sector público, cumpliendo NOM-031, ANCE y especificaciones para licitaciones. Ofrecemos equipos de alta eficiencia, larga vida útil y soporte técnico profesional. Diseñamos soluciones de iluminación confiables y adaptadas a cada necesidad, siempre con calidad certificada y entrega garantizada.
                     </p>
                 </div>
                 <div class="full margin_top_30">
@@ -290,9 +290,9 @@ Asesoría inmediata y entrega a todo México.
                     <img class="img-responsive" src="images/f1.png" alt="Sistema fotovoltaico industrial para empresas">
                 </div>
                 <div class="full text_align_center">
-                    <h3 class="white_font">Sistemas Fotovoltaicos Industriales</h3>
+                    <h3 class="white_font">Luminarias LED para Industria</h3>
                     <p class="white_font">
-                        Soluciones integrales de energía solar diseñadas para empresas, fábricas y corporativos. Reducen costos operativos y mejoran la eficiencia energética.
+                        Soluciones LED para fábricas, almacenes y plantas de producción. Ahorro real, mayor iluminación y equipos diseñados para trabajo pesado.
                     </p>
                 </div>   
             </div>
@@ -301,9 +301,9 @@ Asesoría inmediata y entrega a todo México.
                     <img class="img-responsive" src="images/f2.png" alt="Componentes solares de alta calidad">
                 </div>
                 <div class="full text_align_center">
-                    <h3 class="white_font">Materiales con estándares de calidad superiores. </h3>
+                    <h3 class="white_font">Luminarias LED Viales y Urbanas </h3>
                     <p class="white_font">
-                        Ofrecemos componentes de alta calidad para sistemas solares, garantizando rendimiento óptimo, seguridad y larga vida útil de tu inversión.
+                        Alumbrado público con tecnología LED de última generación. Modelos certificados para municipios, carreteras y proyectos gubernamentales.
                     </p>
                 </div>
             </div>
@@ -312,9 +312,9 @@ Asesoría inmediata y entrega a todo México.
                     <img class="img-responsive" src="images/f3.png" alt="Operación y mantenimiento de sistemas fotovoltaicos">
                 </div>
                 <div class="full text_align_center">
-                    <h3 class="white_font">Operación y Mantenimiento a medida</h3>
+                    <h3 class="white_font">Proyectos Llave en Mano en Alumbrado</h3>
                     <p class="white_font">
-                        Garantizamos el rendimiento óptimo de tu sistema fotovoltaico durante toda su vida útil mediante limpieza, monitoreo y mantenimiento especializado.
+                        Proyectos Llave en Mano en Alumbrado
                     </p>
                 </div>
             </div>
@@ -327,10 +327,9 @@ Asesoría inmediata y entrega a todo México.
         <div class="row">
             <div class="col-md-6">
                 <div class="full main_heading_1">
-                    <h2>Interconexión a la Red Eléctrica</h2>
+                    <h2>Iluminación LED Profesional</h2>
                     <p class="interconexion-text" style="color: #000000;">
-                        Ofrecemos servicios de interconexión a la red eléctrica, asegurando una integración eficiente y segura de tus sistemas fotovoltaicos. 
-                        Gestionamos todos los permisos necesarios y coordinamos con las autoridades locales para que tu transición a la energía solar sea lo más fluida posible.
+                        Ofrecemos soluciones avanzadas en luminarias LED para industria, comercio y espacios públicos. Instalamos equipos de alto rendimiento con certificaciones NOM-031, ANCE y pruebas fotométricas. Gestionamos proyectos llave en mano, desde el diseño hasta la puesta en marcha, garantizando iluminación eficiente, segura y con ahorros significativos.
                     </p>
                 </div>   
                 <div class="full margin_top_30">
