--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ Asesoría inmediata y entrega a todo México.
                 <div class="full text_align_center">
                     <h3 class="white_font">Proyectos Llave en Mano en Alumbrado</h3>
                     <p class="white_font">
-                        Ofrecemos soluciones avanzadas en luminarias LED para industria, comercio y espacios públicos. Instalamos equipos de alto rendimiento con certificaciones NOM-031, ANCE y pruebas fotométricas. Gestionamos proyectos llave en mano, desde el diseño hasta la puesta en marcha, garantizando iluminación eficiente, segura y con ahorros significativos.
+                        Ejecución integral de proyectos de alumbrado: fotometrías, ingeniería, instalación, pruebas y entrega final. Soluciones hechas a medida.
                     </p>
                 </div>
             </div>
