--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <meta name="twitter:image" content="https://luminarias.com.mx/images/og-luminarias.png">
 
   <!-- Datos de contacto estructurados -->
-  <meta name="email" content="ventas@panelessolaresmexico.com.mx" />
+  <meta name="email" content="ventas@luminarias.com.mx" />
 
   <!-- Google Ads Tag -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-952929075"></script>
