--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ Asesoría inmediata y entrega a todo México.
   <p style="color: black;">
     Dirección: Cerro de las campanas 5C #14, Entre Calle Cerro del Zamorano y Calle Cerro del Coyote<br>
     Tel/WhatsApp: 442-2333-003<br>
-    Email: <a href="mailto:ventas@panelessolaresmexico.com.mx" style="color:#007bff;">ventas@panelessolaresmexico.com.mx</a>
+    Email: <a href="mailto:ventas@luminarias.com.mx" style="color:#007bff;">ventas@luminarias.com.mx</a>
   </p>
 </div>
 
