--- a/index.html
+++ b/index.html
@@ -209,12 +209,9 @@ function registrarConversion(url) {
       
      <!-- Columna de texto -->
 <div class="col-md-6 d-flex flex-column justify-content-center slider_text">
-    <h1><strong class="cur">Iluminación solar y LED de alto rendimiento para proyectos profesionales</strong></h1>
+    <h1><strong class="cur">Alumbrado público, solar e industrial de alto rendimiento</strong></h1>
     <p>
-        Iluminación solar y LED de alto rendimiento para proyectos profesionales
-Diseñada para vialidades, industrias y espacios públicos.
-Asesoría inmediata y entrega a todo México.
-
+        Tecnología profesional para vialidades, industrias y obra pública. Asesoría experta y soluciones llave en mano, envíos a todo México.
     </p>
     <div style="margin-top: 10px;">
 <a class="main_bt" 
