--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ function registrarConversion(url) {
                 </div>
                 <div class="full margin_top_20">
                     <p>
-                        Somos especialistas en luminarias LED viales, solares e industriales con más de 15 años en el mercado. Desarrollamos proyectos para empresas, industria y sector público, cumpliendo NOM-031, ANCE y especificaciones para licitaciones. Ofrecemos equipos de alta eficiencia, larga vida útil y soporte técnico profesional. Diseñamos soluciones de iluminación confiables y adaptadas a cada necesidad, siempre con calidad certificada y entrega garantizada.
+                        Somos especialistas en luminarias LED viales, solares e industriales con más de 15 años en el mercado. Desarrollamos proyectos para empresas, industria y sector público, cumpliendo NOM-031, ANCE y especificaciones para licitaciones. Contamos con certificaciones ANCE, PAESE, FIDE y pruebas LM80 que garantizan alta eficiencia y larga vida útil. Ofrecemos garantías por escrito de 3, 5 y hasta 10 años. Diseñamos soluciones de iluminación confiables, seguras y adaptadas a cada necesidad, siempre con calidad certificada y entrega garantizada.	
                     </p>
                 </div>
                 <div class="full margin_top_30">
@@ -324,9 +324,9 @@ function registrarConversion(url) {
         <div class="row">
             <div class="col-md-6">
                 <div class="full main_heading_1">
-                    <h2>Iluminación LED Profesional</h2>
+                    <h2>Soluciones de Iluminación a la Medida</h2>
                     <p class="interconexion-text" style="color: #000000;">
-                        Ofrecemos soluciones avanzadas en luminarias LED para industria, comercio y espacios públicos. Instalamos equipos de alto rendimiento con certificaciones NOM-031, ANCE y pruebas fotométricas. Gestionamos proyectos llave en mano, desde el diseño hasta la puesta en marcha, garantizando iluminación eficiente, segura y con ahorros significativos.
+                        Cada necesidad de nuestros clientes es una oportunidad para diseñar la solución ideal. Cuéntanos la potencia requerida, altura de montaje, nivel de lúmenes, distancia interpostal, cantidad de piezas, presupuesto y tiempo de entrega. Nuestro equipo brindará la asesoría técnica necesaria para ofrecerte luminarias LED confiables, eficientes y adaptadas a tu proyecto, desde el análisis inicial hasta la instalación final.
                     </p>
                 </div>   
                 <div class="full margin_top_30">
